kube/components/openmetadata/openmetadata-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmetadata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openmetadata
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openmetadata
    spec:
      containers:
        - name: openmetadata
          image: vjain143/open-metadata:1.0.1
          ports:
            - containerPort: 8585
            - containerPort: 8586
            - containerPort: 5005
          #command: [ "./opt/open-metadata/bin/openmetadata-server-start.sh", "/opt/open-metadata/conf/openmetadata.yaml" ]
          #command: [ "./opt/open-metadata/bin/openmetadata.sh", "start" ]
          command: [ "/bin/sh", "-c" ]
          args:
            - |
              sleep infinity
          resources: {}
          volumeMounts:
            - name: openmetadata-configmap-volume
              mountPath: /opt/open-metadata/conf/openmetadata.yaml
              subPath: openmetadata.yaml
            - name: openmetadata-configmap-volume
              mountPath: /opt/open-metadata/conf/private_key.der
              subPath: private_key.der
            - name: openmetadata-configmap-volume
              mountPath: /opt/open-metadata/conf/public_key.der
              subPath: public_key.der
      restartPolicy: Always
      volumes:
        - name: openmetadata-configmap-volume
          configMap:
            name: openmetadata-configmap
#status: {}
