kube/components/openmetadata/openmetadata-ingestion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmetadata-ingestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openmetadata-ingestion
  template:
    metadata:
      labels:
        app: openmetadata-ingestion
    spec:
      containers:
        - name: openmetadata-ingestion
          image: openmetadata/ingestion:latest
          command: [ "/bin/sh", "-c" ]
          args:
            - |
              airflow db init       
              airflow users create --username admin --firstname Admin --lastname User --role Admin --email admin@example.com --password admin
              airflow webserver
          volumeMounts:
            - name: airflow-config-volume
              mountPath: /opt/airflow/airflow.cfg  # Mounts the file in the same place
              subPath: airflow.cfg  # Ensures only this file is mounted
      volumes:
        - name: airflow-config-volume
          configMap:
            name: airflow-config

---
apiVersion: v1
kind: Service
metadata:
  name: openmetadata-ingestion
spec:
  selector:
    app: openmetadata-ingestion
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30880
      targetPort: 8080
  type: NodePort
