kube/components/openmetadata/openmetadata-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmetadata-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openmetadata-server
  template:
    metadata:
      labels:
        app: openmetadata-server
    spec:
      containers:
        - name: openmetadata-server
          image: openmetadata/server:latest
          ports:
            - containerPort: 8585
          command: [ "/bin/sh", "-c" ]
          #args:
          #  - |
          #    ./bootstrap/openmetadata-ops.sh migrate
          args:
            - |
              ./bootstrap/openmetadata-ops.sh migrate
              ./bin/./openmetadata-server-start.sh ./conf/openmetadata.yaml
      volumes:
        - name: openmetadata-configmap-volume
          configMap:
            name: openmetadata-config
---
apiVersion: v1
kind: Service
metadata:
  name: openmetadata-server
spec:
  selector:
    app: openmetadata-server
  ports:
    - protocol: TCP
      port: 8585
      nodePort: 30085
      targetPort: 8585
  type: NodePort
