kube/components/openmetadata/openmetadata-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmetadata-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openmetadata-ui
  template:
    metadata:
      labels:
        app: openmetadata-ui
    spec:
      containers:
        - name: openmetadata-ui
          image: openmetadata/ui:latest
          ports:
            - containerPort: 3000
      volumes:
        - name: openmetadata-configmap-volume
          configMap:
            name: openmetadata-config
---
apiVersion: v1
kind: Service
metadata:
  name: openmetadata-ui
spec:
  selector:
    app: openmetadata-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
