kube/components/openmetadata/openmetadata-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmetadata-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: openmetadata
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openmetadata-ui
            port:
              number: 3000
