kube/components/openmetadata/openmetadata-egress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-traffic-to-openmetadata
spec:
  podSelector:
    matchExpressions:
      - { key: app, operator: In, values: [ hive-metastore, minio, mysql, trino, superset, openmetadata-server, elasticsearch, openmetadata-ingestion ] }
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.1.0.0/24
      ports:
        - protocol: TCP
          port: 9083
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8585
        - protocol: TCP
          port: 30880
        - protocol: TCP
          port: 30080
